# poc-bazel-with-golang-and-python

./: .gitignore  BUILD  README.md  WORKSPACE
service_a/cmd/: BUILD.bazel
service_c/: BUILD  README.md  cli.py
service_c/tests/: BUILD  test_sample.py
src/service_a/: README.md
src/service_a/cmd/: BUILD.bazel  main.go
src/service_c/: .pazelrc  README.md  WORKSPACE  bazel-service_c
src/service_c/service_c/: BUILD  cli.py
src/service_c/tests/: BUILD  test_sample.py
